<resources>
    <string name="app_name">Storage Manager</string>

    <string name="login_tvTextBreweryName">Pivovara Daruvar</string>
    <string name="login_tvTextLogin">Login</string>
    <string name="login_tvTextForgotPassword">Forgot password?</string>
    <string name="login_etHintEmail">Email</string>
    <string name="login_etHintPassword">Password</string>
    <string name="login_btnTextLogin">Login</string>
    <string name="login_btnTextRegister">Register</string>

    <string name="register_tvTextRegister">REGISTER</string>
    <string name="register_tvTextAlreadyHaveAccount">Already have an account? Sign in</string>
    <string name="register_btnTextSignUp">SIGN UP</string>
    <string name="register_etHintPassword">More than 6 letters</string>
    <string name="register_tvTextPassword">Password</string>
    <string name="register_etHintUsername">Name in app</string>
    <string name="register_tvTextUsername">Username</string>
    <string name="register_tvTextName">Name</string>
    <string name="register_etHintName">First and Last name</string>
    <string name="register_tvTextEmail">Email</string>
    <string name="register_etHintEmail">Your email address</string>

    <string name="home_btnTextLogout">LOGOUT</string>
    <string name="home_btnTextPresets">PRESETS</string>
    <string name="home_btnTextOrders">ORDERS</string>

    <string name="orders_btnTextOrder">Order</string>
    <string name="orders_tvTextOrder">NEW ORDERS</string>
    <string name="orders_tvTextOrderName">Customer name</string>
    <string name="orders_tvTextBeerName">Beer name</string>
    <string name="orders_etHintOrderName">StarCafe</string>
    <string name="orders_etHintBeerName">ABA</string>
    <string name="orders_tvTextAmountOfBags">Amount of bags</string>
    <string name="orders_tvHintAmountOfBags">3</string>
    <string name="orders_etHintAmountOfBags">3</string>
    <string name="orders_tvTextListOfOrders">List of orders</string>
    <string name="orders_tvTextName">Name</string>
    <string name="orders_tvTextAmount">Amount</string>
    <string name="orders_btnTextInput">INPUT</string>

    <string name="storage_tvTextStorage">STORAGE</string>
    <string name="storage_tvTextAmount">Amount</string>
    <string name="storage_tvTextName">Name</string>
    <string name="presets_tvTextPresets">PRESETS</string>
    <string name="presets_tvTextSelectBeer">Select beer</string>
    <string name="presets_tvTextName">Name</string>
    <string name="presets_etHintName">name</string>
    <string name="presets_tvListTextPresets">Available presets</string>
    <string name="presets_tvTextListName">Name</string>
    <string name="presets_tvTextAmount">Amount</string>
    <string name="presets_btnTextOrder">SELECT</string>


    <string name="adding_to_storage_TextNewItem">NEW INGREDIENT</string>
    <string name="adding_to_storage_tvTextName">Name</string>
    <string name="adding_to_storage_etHintName">Water</string>
    <string name="adding_to_storage_btnTextAdd">ADD</string>
    <string name="adding_to_storage_etHintAmount">300</string>
    <string name="adding_to_storage_tvTextAmount">Amount</string>
    <string name="adding_to_storage_btnTextAddPreset">FINISH</string>


    <string name="adding_new_presets_TextNewPreset">NEW PRESET</string>
    <string name="adding_new_presets_tvTextName">Beer name</string>
    <string name="adding_new_presets_etHintName">ABA</string>
    <string name="adding_new_presets_tvTextIngredients">Ingredient</string>
    <string name="adding_new_presets_etHintIngredients">Water</string>
    <string name="adding_new_presets_btnTextAddIngredient">ADD INGREDIENT</string>
    <string name="adding_new_presets_tvTextAmount">Amount</string>
    <string name="adding_new_presets_etHintAmount">200</string>
    <string name="adding_new_presets_tvTextIngredientName">Name</string>
    <string name="adding_new_presets_tvTextIngredientAmount">Amount</string>
    <string name="adding_new_presets_etHintNext">NEXT</string>


    <string name="orders_history_tvTextPresets">ORDERS</string>
    <string name="orders_history_tvTextAmount">Amount</string>
    <string name="orders_history_tvTextName">List of customers</string>
    <string name="orders_history_btnTextOrder">RETURN</string>


    <string name="presets_history_tvTextPresets">PRESETS</string>
    <string name="presets_history_tvTextName">Selected presets</string>
    <string name="presets_history_tvTextAmount">Amount</string>
    <string name="presets_history_btnTextOrder">RETURN</string>
    <string name="presets_tvListTextIngredients">Preset ingredients</string>


    <string name="forgot_password_tvTextHeader">NEW PASSWORD</string>
    <string name="forgot_password_tvTextUsername">Username</string>
    <string name="forgot_password_etHintUsername">user123</string>
    <string name="forgot_password_etHintEmail">user.user@gmail.com</string>
    <string name="forgot_password_tvTextEmail">Email</string>
    <string name="forgot_password_btnTextSend">SEND</string>


    <string name="storage_dialog_tvTextIngredientName">Water</string>
    <string name="storage_dialog_tvTextIngredientAmount">20</string>
    <string name="storage_dialog_btnTextUpdate">UPDATE</string>
    <string name="storage_dialog_btnTextDelete">DELETE</string>
    <string name="history_dialog_tvText">Are you sure you want to delete this?</string>
    <string name="history_dialog_tvTextYes">YES</string>
    <string name="history_dialog_tvTextNo">NO</string>
    <string name="splash_screen_tvTextAppName">Storage Manager</string>
    <string name="about_dialog_tvText">Ordered items</string>
    <string name="about_dialogBtnText">Create PDF</string>
    <string name="about_dialog_tvBeerAmount">Amount</string>
    <string name="about_dialog_tvBeerName">Name</string>
    <string name="about_dialogBtnDeleteOrder">DELETE ORDER</string>
</resources>
