<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_background_home"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/adding_to_storage_tvIdNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/adding_to_storage_MarginTopNewItem"
        android:layout_centerHorizontal="true"
        android:text="@string/adding_to_storage_TextNewItem"
        android:textStyle="bold"
        android:textSize="@dimen/adding_to_storage_SizeNewItem"
        android:textColor="@color/adding_to_storage_TextColorNewItem"/>
    <RelativeLayout
        android:layout_width="@dimen/adding_to_storage_layoutWidth"
        android:layout_height="@dimen/adding_to_storage_layoutHeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/adding_to_storage_layoutMarginTop"
        android:background="@drawable/custom_layout">
        <Button
            android:id="@+id/adding_to_storage_btnIdAdd"
            android:layout_width="@dimen/adding_to_storage_btnWidthAdd"
            android:layout_height="@dimen/adding_to_storage_btnHeightAdd"
            android:layout_below="@+id/adding_to_storage_etIdAmount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/adding_to_storage_btnMarginTopAdd"
            android:background="@drawable/custom_button"
            android:text="@string/adding_to_storage_btnTextAdd"
            android:textColor="@color/adding_to_storage_btnTextColorAdd"/>
        <EditText
            android:id="@+id/adding_to_storage_etIdAmount"
            android:layout_width="@dimen/adding_to_storage_etWidthAmount"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adding_to_storage_tvIdAmount"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/adding_to_storage_etMarginTopAmount"
            android:background="@drawable/custom_input"
            android:elevation="@dimen/adding_to_storage_etElevationAmount"
            android:hint="@string/adding_to_storage_etHintAmount"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/adding_to_storage_etPaddingStartAmount"
            android:paddingEnd="@dimen/adding_to_storage_etPaddingEndAmount"/>
        <EditText
            android:id="@+id/adding_to_storage_etIdName"
            android:layout_width="@dimen/adding_to_storage_etWidthName"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adding_to_storage_tvIdName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/adding_to_storage_etMarginTopName"
            android:background="@drawable/custom_input"
            android:elevation="@dimen/adding_to_storage_etElevationName"
            android:hint="@string/adding_to_storage_etHintName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/adding_to_storage_etPaddingStartName"
            android:paddingEnd="@dimen/adding_to_storage_etPaddingEndName"/>
        <TextView
            android:id="@+id/adding_to_storage_tvIdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/adding_to_storage_tvMarginTopName"
            android:text="@string/adding_to_storage_tvTextName"
            android:textColor="@color/adding_to_storage_tvTextColorName"
            android:textSize="@dimen/adding_to_storage_tvTextSizeName"/>
        <TextView
            android:id="@+id/adding_to_storage_tvIdAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adding_to_storage_etIdName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/adding_to_storage_tvMarginTopAmount"
            android:text="@string/adding_to_storage_tvTextAmount"
            android:textColor="@color/adding_to_storage_tvTextColorAmount"
            android:textSize="@dimen/adding_to_storage_tvTextSizeAmount"/>
    </RelativeLayout>
</RelativeLayout>