<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/storage_dialog_rlHeight"
    android:background="@drawable/custom_dialog">
    <Button
        android:id="@+id/storage_dialog_btnIdExit"
        android:layout_width="@dimen/storage_dialog_btnWidthExit"
        android:layout_height="@dimen/storage_dialog_btnHeightExit"
        android:layout_marginTop="@dimen/storage_dialog_btnMarginTopExit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/storage_dialog_btnMarginEndExit"
        android:background="@drawable/ic_baseline_close_24"/>
    <TextView
        android:id="@+id/storage_dialog_tvIdIngredientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/storage_dialog_tvMarginTopIngredientName"
        android:text="@string/storage_dialog_tvTextIngredientName"
        android:textSize="35sp"/>
    <TextView
        android:id="@+id/storage_dialog_tvIdIngredientAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/storage_dialog_tvIdIngredientName"
        android:layout_marginTop="@dimen/storage_dialog_tvMarginTopIngredientAmount"
        android:text="@string/storage_dialog_tvTextIngredientAmount"
        android:textSize="25sp"/>
    <SeekBar
        android:id="@+id/storage_dialog_seekBarId"
        android:layout_width="@dimen/storage_dialog_seekBarWidth"
        android:layout_height="@dimen/storage_dialog_seekBarHeight"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/storage_dialog_tvIdIngredientAmount"
        android:layout_marginTop="@dimen/storage_dialog_seekBarMarginTop"
        android:max="10"/>
    <Button
        android:id="@+id/storage_dialog_btnIdUpdate"
        android:layout_width="@dimen/storage_dialog_btnWidth"
        android:layout_height="@dimen/storage_dialog_btnHeight"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/storage_dialog_btnMarginTop"
        android:layout_marginBottom="40dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/storage_dialog_btnTextColorUpdate"
        android:text="@string/storage_dialog_btnTextUpdate"/>
    <Button
        android:id="@+id/storage_dialog_btnIdDelete"
        android:layout_width="@dimen/storage_dialog_btnWidth"
        android:layout_height="@dimen/storage_dialog_btnHeight"
        android:layout_marginTop="@dimen/storage_dialog_btnMarginTop"
        android:layout_marginBottom="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:background="@drawable/custom_button"
        android:textColor="@color/storage_dialog_btnTextColorDelete"
        android:text="@string/storage_dialog_btnTextDelete"/>
</RelativeLayout>