<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/storage_dialog_rlHeight"
    android:background="@drawable/custom_dialog">
    <Button
        android:id="@+id/history_dialog_btnIdExit"
        android:layout_width="@dimen/storage_dialog_btnWidthExit"
        android:layout_height="@dimen/storage_dialog_btnHeightExit"
        android:layout_marginTop="@dimen/storage_dialog_btnMarginTopExit"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/storage_dialog_btnMarginEndExit"
        android:background="@drawable/ic_baseline_close_24"/>
    <TextView
        android:id="@+id/history_dialog_tvIdHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/history_dialog_tvMarginTopHeadline"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/history_dialog_tvText"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/history_dialog_tvIdYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/history_dialog_tvIdHeadline"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="@dimen/history_dialog_tvMarginTopYes"
        android:layout_marginBottom="30dp"
        android:text="@string/history_dialog_tvTextYes"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/history_dialog_tvIdNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/history_dialog_tvIdHeadline"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/history_dialog_tvMarginTopNo"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        android:text="@string/history_dialog_tvTextNo"
        android:textSize="15sp"/>
</RelativeLayout>